--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "firebase": "^7.16.0",
+    "firebase-admin": "^9.0.0",
+    "firebase-tools": "^8.6.0",
     "history": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
