--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "firebase-admin": "^9.0.0",
     "firebase-tools": "^8.6.0",
     "history": "^5.0.0",
+    "material-ui-color": "^0.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
