--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.158",
     "@types/node": "^12.12.50",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
@@ -17,6 +18,7 @@
     "firebase-admin": "^9.0.0",
     "firebase-tools": "^8.6.0",
     "history": "^5.0.0",
+    "lodash": "^4.17.19",
     "material-ui-color": "^0.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
